--- a/gzdoom_portable.ini
+++ b/gzdoom_portable.ini
@@ -580,7 +580,7 @@ fov=90
 fviewbob=true
 gender=male
 movebob=0.25
-name=Flytrap
+name=Player
 neverswitchonpickup=false
 playerclass=BTSXguy
 skin=base
@@ -1445,7 +1445,7 @@ colorset=0
 fov=90
 gender=male
 movebob=0.25
-name=Flytrap
+name=Player
 neverswitchonpickup=false
 playerclass=Fighter
 skin=base
@@ -1839,7 +1839,7 @@ fov=100
 fviewbob=true
 gender=male
 movebob=0.25
-name=Flytrap
+name=Player
 neverswitchonpickup=false
 playerclass=Fighter
 skin=base
